# quran-reader

./: io.github.hihebark.QuranReader.yml
data/: io.github.hihebark.QuranReader.desktop  io.github.hihebark.QuranReader.metainfo.xml  io.github.hihebark.QuranReader.service  meson.build
src/quran_reader/: window.py
